# cloudreve-cli

./: .gitignore  Cargo.toml
crates/cloudreve-api/src/: client.rs
crates/cloudreve-api/src/api/: user.rs
crates/cloudreve-cli/: Cargo.toml
crates/cloudreve-cli/src/: config.rs  main.rs
crates/cloudreve-cli/src/commands/: auth.rs  login.rs  mod.rs  upload.rs
crates/cloudreve-cli/src/uploader/: chunk.rs  encrypt.rs  error.rs  mod.rs  progress.rs  session.rs
crates/cloudreve-cli/src/uploader/providers/: local.rs  mod.rs  onedrive.rs  qiniu.rs  s3.rs  upyun.rs
ui/src/: App.tsx
