[package]
name = "cloudreve-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Cloudreve cloud storage"

[[bin]]
name = "cloudreve"
path = "src/main.rs"

[dependencies]
cloudreve-api = { path = "../cloudreve-api" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.17"
walkdir = "2.5"
bytes = "1.5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
