[package]
name = "cloudreve-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cloudreve-api = { path = "../cloudreve-api" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
indicatif = "0.17"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.22"
aes = "0.8"
ctr = "0.9"
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2.1"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
serde_json = "1.0"
